Refactor jobs, categories, reviews, and worker-skill flows
Large refactor across controllers, DTOs, entities, repositories and services to support a richer job lifecycle and cleaner domain models. Highlights:

- Controllers: renamed/rewired endpoints (jobs under /api/jobs), added Worker_category_Controller, applied @PreAuthorize and @AuthenticationPrincipal to secure actions.
- DTOs: standardized field names, added pricing, urgency, locality and status types; improved validation annotations.
- Entities: normalized column names, added timestamps (@CreationTimestamp), optimistic locking (@Version), builder patterns, enum updates (ACCEPTED, IN_PROGRESS), and uniqueness constraints.
- Repositories: added query methods and custom JPQL for available jobs, rating aggregation, and worker-category lookups.
- Services: introduced Service_Request_interface; implemented job lifecycle methods (create/accept/start/complete/cancel), richer business rules (capacity, availability, category checks), transactional boundaries, and review submission logic that updates worker ratings.

Also added Resource/validation checks and custom exception usages (ResourceNotFoundException, InvalidJobStateException, UnauthorizedActionException, JobAlreadyAcceptedException) to enforce business rules and improve error handling.